trace-la/src/styles/layout.css
/*-----------------------GENERAL CSS------------------------*/
body {
    overflow: hidden;
}

.body {
    display: flex;
    flex-direction: column;
    background-color: #1295D8;
    justify-content: center;
    align-items: center;
    padding: 64px 32px;
    min-height: calc(80vmin);
}

.row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 32px;
}

.link {
    color: white;
}
.link:hover {
    color: #FAEDB1;
    text-decoration: none;
}

/*form*/
.form_container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 32px 48px;
    background-color: #FFB511;
    border-radius: 20px;
    -webkit-box-shadow:0 2px 10px rgba(0, 0, 0, 0.3), 0 0 50px rgba(0, 0, 0, 0.1) inset;
    -moz-box-shadow:0 2px 10px rgba(0, 0, 0, 0.3), 0 0 50px rgba(0, 0, 0, 0.1) inset;
    box-shadow:0 2px 10px rgba(0, 0, 0, 0.3), 0 0 50px rgba(0, 0, 0, 0.1) inset;
}

.form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.input{
    padding: 2px 4px;
    margin-top: 8px;
    margin-bottom: 16px;
    width: 100%;
    border: none;
    border-radius: 20px;
}
.input:focus{
    outline: none;
}
.textarea {
    padding: 2px 4px;
    margin-top: 8px;
    margin-bottom: 16px;
    height: 100px;
    width: 100%;
}
.textarea:focus {
    outline: none;
}
.submit_button {
    border-radius: 4px;
    background-color: #1295D8;
    border: none;
    padding: 8px 16px;
    color: #0d4968;
}
.submit_button:hover {
    transform: scale(1.1);
}
.submit_button:focus {
    outline: none;
}
label {
    font-size: 20px;
}


/*modal*/
/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
    background-color: #acd7e3;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close-modal {
    color: black;
    background-color: #acd7e3;
    float: right;
    border: none;
    font-size: 28px;
    font-weight: bold;
}

.close-modal:hover,
.close-modal:focus {
    color: #0d4968;
    text-decoration: none;
    cursor: pointer;
    outline: none;
}

/* ------------------------HOME----------------------*/
.sign_up {
    float: right;
    margin-left: auto;
    margin-bottom: 32px;
}

/*-----------------------SURVEY CSS------------------------*/
.survey {
    background-color: burlywood;
    padding: 32px;
}

